fix text wrapping

--- a/src/app/(site)/page.module.scss
+++ b/src/app/(site)/page.module.scss
@@ -92,6 +92,10 @@ visibility: visible;
 opacity: 1;
 }
 
+.textLink {
+    display: flex;
+}
+
   /* Mobile */
   @media (max-width: 700px) {
     .tooltipText {
